[metadata]
name = bel_repository
version = 0.0.1-dev
description = A utility for loading data from repositories of BEL documents.
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/cthoyt/bel-repository
download_url = https://github.com/cthoyt/bel-repository/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/bel-repository/issues
    Source Code = https://github.com/cthoyt/bel-repository

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
	Biological Expression Language
	BEL
	Domain Specific Language
	DSL
	Systems Biology
	Networks Biology

[options]
install_requires =
    dataclasses; python_version < "3.7"
	pybel
	tqdm
	pandas
	click

# Random options
zip_safe = false
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
