[metadata]
name = bel_repository
version = 0.1.0-dev
description = A utility for loading data from repositories of BEL documents.
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pybel/bel-repository
download_url = https://github.com/pybel/bel-repository/releases
project_urls =
    Bug Tracker = https://github.com/pybel/bel-repository/issues
    Source Code = https://github.com/pybel/bel-repository

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
	Biological Expression Language
	BEL
	Domain Specific Language
	DSL
	Systems Biology
	Networks Biology

[options]
install_requires =
    dataclasses; python_version < "3.7"
	pybel>=0.14.2,<0.15.0
	tqdm
	pandas
	click

# Random options
zip_safe = false
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bel-repository = bel_repository.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bel_repository
omit =
    tests/*

[coverage:paths]
source =
    src/bel_repository
    .tox/*/lib/python*/site-packages/bel_repository

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
